  starting the extra-name with a dot. These elements wll not be contained is
  as.data.frame(opt.path) when converted.
- make*Param argument 'requires' now accepts expressions and quote'd expressions.
- getParamIds is now S3 and also callable on type "Param"
- filterParams: has new arg "check.requires"
- isFeasible: new args "use.defaults" and "filter"
- new functions
-- isNumericStrict
-- getTypeStringsNumeric, getTypeStringsNumericStrict, getTypeStringsInteger, getTypeStringsDiscrete
-- filterParamsNumeric, filterParamsDiscrete
-- updateParVals

ParamHelpers_1.7:
- dfRowsToList, dfRowToList: added arg enforce.col.types
- UntypedParam also got the "tunable" flag

ParamHelpers_1.6:
- added new character parameter types, see new functions below
- added property 'tunable' to make*Param
- isFeasible supports named lists for unordered checks
- numeric and numericvector Params and LearnerParams have a new arg 'allow.inf'
- filterParams can now filter based on 'ids' and 'tunable'
- convertParamSetToIrace: removed argument 'digits' to keep maximum precision of boundaries
- added renderOptPathPlot and plotOptPath for plotting of optimization paths.
- added plotEAF and plotYTraces to compare singlecrit and bicrit optimization paths.
- new functions
-- isRequiresOk
-- plotEAF
-- plotYTraces
-- renderOptPathPlot, plotOptPath
-- makeCharacterParam, makeCharacterVectorParam
-- isCharacter, hasCharacter

ParamHelpers_1.5:
- added constr.clip to print.ParamSet and related internal functions to make prints more readable
- getDefaults: new option include.null

ParamHelpers_1.4:
- sampleValue(s): 'discrete.names' now only affects discrtete params and not logicals anymore.
  logical params always result in R data type 'logical'
- Vector params (num, int and log) can now have component names
- many more OptPath getter methods allow the selection option 'dob' and 'eol' to subset the result
- new functions
-- getOptPathX
-- generateRandomDesign

ParamHelpers_1.3: