@@ -12,7 +12,9 @@ Parameter or parameter set.}
 
 \item{x}{[any] \cr
 Single value to check.
-For a parameter set this must be a list in the correct order.}
+For a parameter set this must be a list. If the list is unnamed (not recommended) it must be in
+the same order as the param set. If it is named, its names must match the parameter names in the
+param set.}
 }
 \value{
 Transformed value.
